--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,8 @@ jobs:
         features:
           - conan
           - git-repo
+          - vim
+          - tig
         baseImage:
           - debian:latest
           - ubuntu:latest
@@ -36,6 +38,8 @@ jobs:
         features:
           - conan
           - git-repo
+          - vim
+          - tig
     steps:
       - uses: actions/checkout@v3
 
