--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ jobs:
           - bazel
           - clang-format
           - clangd
+          - capnproto
         baseImage:
           - debian:latest
           - ubuntu:latest
@@ -46,6 +47,7 @@ jobs:
           - bazel
           - clang-format
           - clangd
+          - capnproto
     steps:
       - uses: actions/checkout@v3
 
